Aula 26-9/calc/calc.output
Grammar

    0 $accept: linha $end

    1 linha: linha comando ENTER
    2      | ε

    3 comando: expr
    4        | VAR RECEBE expr

    5 expr: NUM
    6     | VAR
    7     | expr MENOS expr
    8     | expr VEZES expr
    9     | expr DIV expr
   10     | expr MAIS expr
   11     | ABRE expr FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUM (258) 5
    VEZES (259) 8
    MAIS (260) 10
    MENOS (261) 7
    DIV (262) 9
    ENTER (263) 1
    ABRE (264) 11
    FECHA (265) 11
    VAR (266) 4 6
    RECEBE (267) 4


Nonterminals, with rules where they appear

    $accept (13)
        on left: 0
    linha (14)
        on left: 1 2
        on right: 0 1
    comando (15)
        on left: 3 4
        on right: 1
    expr (16)
        on left: 5 6 7 8 9 10 11
        on right: 3 4 7 8 9 10 11


State 0

    0 $accept: • linha $end

    $default  reduce using rule 2 (linha)

    linha  go to state 1


State 1

    0 $accept: linha • $end
    1 linha: linha • comando ENTER

    $end  shift, and go to state 2
    NUM   shift, and go to state 3
    ABRE  shift, and go to state 4
    VAR   shift, and go to state 5

    comando  go to state 6
    expr     go to state 7


State 2

    0 $accept: linha $end •

    $default  accept


State 3

    5 expr: NUM •

    $default  reduce using rule 5 (expr)


State 4

   11 expr: ABRE • expr FECHA

    NUM   shift, and go to state 3
    ABRE  shift, and go to state 4
    VAR   shift, and go to state 8

    expr  go to state 9


State 5

    4 comando: VAR • RECEBE expr
    6 expr: VAR •

    RECEBE  shift, and go to state 10

    $default  reduce using rule 6 (expr)


State 6

    1 linha: linha comando • ENTER

    ENTER  shift, and go to state 11


State 7

    3 comando: expr •
    7 expr: expr • MENOS expr
    8     | expr • VEZES expr
    9     | expr • DIV expr
   10     | expr • MAIS expr

    VEZES  shift, and go to state 12
    MAIS   shift, and go to state 13
    MENOS  shift, and go to state 14
    DIV    shift, and go to state 15

    $default  reduce using rule 3 (comando)


State 8

    6 expr: VAR •

    $default  reduce using rule 6 (expr)


State 9

    7 expr: expr • MENOS expr
    8     | expr • VEZES expr
    9     | expr • DIV expr
   10     | expr • MAIS expr
   11     | ABRE expr • FECHA

    VEZES  shift, and go to state 12
    MAIS   shift, and go to state 13
    MENOS  shift, and go to state 14
    DIV    shift, and go to state 15
    FECHA  shift, and go to state 16


State 10

    4 comando: VAR RECEBE • expr

    NUM   shift, and go to state 3
    ABRE  shift, and go to state 4
    VAR   shift, and go to state 8

    expr  go to state 17


State 11

    1 linha: linha comando ENTER •

    $default  reduce using rule 1 (linha)


State 12

    8 expr: expr VEZES • expr

    NUM   shift, and go to state 3
    ABRE  shift, and go to state 4
    VAR   shift, and go to state 8

    expr  go to state 18


State 13

   10 expr: expr MAIS • expr

    NUM   shift, and go to state 3
    ABRE  shift, and go to state 4
    VAR   shift, and go to state 8

    expr  go to state 19


State 14

    7 expr: expr MENOS • expr

    NUM   shift, and go to state 3
    ABRE  shift, and go to state 4
    VAR   shift, and go to state 8

    expr  go to state 20


State 15

    9 expr: expr DIV • expr

    NUM   shift, and go to state 3
    ABRE  shift, and go to state 4
    VAR   shift, and go to state 8

    expr  go to state 21


State 16

   11 expr: ABRE expr FECHA •

    $default  reduce using rule 11 (expr)


State 17

    4 comando: VAR RECEBE expr •
    7 expr: expr • MENOS expr
    8     | expr • VEZES expr
    9     | expr • DIV expr
   10     | expr • MAIS expr

    VEZES  shift, and go to state 12
    MAIS   shift, and go to state 13
    MENOS  shift, and go to state 14
    DIV    shift, and go to state 15

    $default  reduce using rule 4 (comando)


State 18

    7 expr: expr • MENOS expr
    8     | expr • VEZES expr
    8     | expr VEZES expr •
    9     | expr • DIV expr
   10     | expr • MAIS expr

    $default  reduce using rule 8 (expr)


State 19

    7 expr: expr • MENOS expr
    8     | expr • VEZES expr
    9     | expr • DIV expr
   10     | expr • MAIS expr
   10     | expr MAIS expr •

    VEZES  shift, and go to state 12
    DIV    shift, and go to state 15

    $default  reduce using rule 10 (expr)


State 20

    7 expr: expr • MENOS expr
    7     | expr MENOS expr •
    8     | expr • VEZES expr
    9     | expr • DIV expr
   10     | expr • MAIS expr

    VEZES  shift, and go to state 12
    DIV    shift, and go to state 15

    $default  reduce using rule 7 (expr)


State 21

    7 expr: expr • MENOS expr
    8     | expr • VEZES expr
    9     | expr • DIV expr
    9     | expr DIV expr •
   10     | expr • MAIS expr

    $default  reduce using rule 9 (expr)
